# cruelEngine

./: .clang-format  .gitmodules  CHANGES.md  CMakeLists.txt  Doxyfile  Performace_Tips.md  README.md  REAMME.md  Vulkan_Model.dia  loc  struct.drawio
data/shaders/texture/: frag.spv  shader.frag  shader.vert  vert.spv
data/shaders/triangle/: shader.vert  vert.spv
data/shaders/wireframe/: vert.spv  wireframe.frag
doc/: struct.drawio
doc/html/: _r_e_a_d_m_e_8md.html  annotated.html  application_2_r_e_a_d_m_e_8md.html  application_8cpp.html  application_8cpp__incl.map  application_8cpp__incl.md5  application_8cpp_source.html  application_8hpp.html  application_8hpp__dep__incl.map  application_8hpp__dep__incl.md5  application_8hpp__incl.map  application_8hpp__incl.md5  application_8hpp_source.html  audio_2_r_e_a_d_m_e_8md.html  basic_2sphere_8cpp.html  basic_2sphere_8cpp_source.html  basic_2sphere_8hpp.html  basic_2sphere_8hpp_source.html  buffer_8cpp.html  buffer_8cpp__incl.map  buffer_8cpp__incl.md5  buffer_8cpp_source.html  buffer_8hpp.html  buffer_8hpp__dep__incl.map  buffer_8hpp__dep__incl.md5  buffer_8hpp__incl.map  buffer_8hpp__incl.md5  buffer_8hpp_source.html  buffer__pool_8cpp.html  buffer__pool_8cpp__incl.map  buffer__pool_8cpp__incl.md5  buffer__pool_8cpp_source.html  buffer__pool_8hpp.html  buffer__pool_8hpp__dep__incl.map  buffer__pool_8hpp__dep__incl.md5  buffer__pool_8hpp__incl.map  buffer__pool_8hpp__incl.md5  buffer__pool_8hpp_source.html  camera_8cpp.html  camera_8cpp__incl.map  (+1292 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+93 more)
editor/: CMakeLists.txt  README.md  main.cpp
examples/: CMakeLists.txt  README.md  draw_index.cpp  texture.cpp  triangle.cpp  uniform_buffer.cpp
plugin/: CMakeLists.txt  README.md  plugin.cpp  plugin.hpp
src/: CMakeLists.txt  README.md  common.h  types.h
src/application/: CMakeLists.txt  README.md  application.cpp  application.hpp
src/audio/: CMakeLists.txt  README.md  audio.cpp  audio.hpp
src/core/: CMakeLists.txt  README.md  commandline.cpp  memory.cpp  thread.cpp  thread.hpp  time.cpp  time.hpp
src/debug/: CMakeLists.txt  README.md  debug.cpp  debug.hpp
src/events/: CMakeLists.txt  README.md  event.hpp  keyboard.cpp  mouse.cpp
src/io/: CMakeLists.txt  README.md  filesystem.cpp  filesystem.hpp  io.cpp  io.h
src/network/: CMakeLists.txt  README.md  socket.cpp  socket.hpp
src/physics/: CMakeLists.txt  README.md  noise.cpp  noise.hpp
src/platform/: CMakeLists.txt  platform.cpp  platform.hpp
src/render/: CMakeLists.txt  README.md  SubPass.cpp  SubPass.hpp  api.h  buffer.cpp  buffer.hpp  camera.hpp  gui_overlay.cpp  gui_overlay.hpp  hash.h  instance.cpp  instance.hpp  logicalDevice.cpp  logicalDevice.hpp  physicalDevice.hpp  pipeLine.cpp  pipeLine.hpp  render.hpp  renderContext.hpp  renderPass.cpp  renderPass.hpp  render_context.cpp  render_context.hpp  render_frame.cpp  render_frame.hpp  render_header.h  render_pipeline.cpp  render_pipeline.hpp  render_session.cpp  render_session.hpp  render_target.cpp  render_target.hpp  render_task.cpp  render_task.hpp  resource_cache.cpp  resource_cache.hpp  semaphores.cpp  semaphores.hpp  shader.cpp  (+9 more)
src/render/opengl/: CMakeLists.txt  README.md  glcommon.h  render.cpp
src/render/render_tasks/: geom_task.cpp  geom_task.hpp  render_tasks.hpp
src/render/subpasses/: geompass.cpp  geompass.hpp  lightpass.cpp  lightpass.hpp
src/render/vulkan/: CMakeLists.txt  README.md  buffer.cpp  buffer.hpp  buffer_pool.cpp  buffer_pool.hpp  camera.hpp  commandBuffer.cpp  commandBuffer.hpp  commandPool.cpp  commandPool.hpp  command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  descriptor.cpp  descriptor.hpp  frameBuffer.cpp  frameBuffer.hpp  frame_buffer.cpp  frame_buffer.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  instance.cpp  instance.hpp  logicalDevice.hpp  logical_device.cpp  logical_device.hpp  physicalDevice.cpp  physicalDevice.hpp  physical_device.cpp  physical_device.hpp  pipeLine.cpp  pipeLine.hpp  pipeline.cpp  pipeline.hpp  queue.cpp  queue.hpp  (+32 more)
src/scene/: CMakeLists.txt  README.md  camera.cpp  camera.hpp  component.cpp  component.hpp  gltflaoder.cpp  gltflaoder.hpp  mesh.cpp  mesh.hpp  node.cpp  node.hpp  object.cpp  object.hpp  scene.cpp  scene.hpp  scene_graph.cpp  scene_graph.hpp  scene_header.h  sgcommon.h  shape.hpp
src/scene/basic/: shape.cpp  shape.hpp
src/scene/components/: aabb.cpp  aabb.hpp  animation.cpp  animation.hpp  camera.cpp  camera.hpp  collider.cpp  collider.hpp  components.h  image.cpp  image.hpp  light.cpp  light.hpp  material.hpp  mesh.cpp  mesh.hpp  primitive.cpp  primitive.hpp  script.cpp  script.hpp  skybox.hpp  texture.cpp  texture.hpp  transform.cpp  transform.hpp  triangle.cpp  triangle.hpp
src/scene/objects/: light.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
src/scene/scene_objects/: aabb.cpp  aabb.hpp  image.cpp  image.hpp  light.cpp  material.hpp  mesh.hpp  skybox.cpp  skybox.hpp  sphere.cpp  sphere.hpp  texture.cpp  texture.hpp  transform.cpp  transform.hpp  triangle.cpp
src/scene/shape/: cube.cpp  cube.hpp  sphere.cpp  sphere.hpp
src/sence/: README.md
src/ui/: CMakeLists.txt  README.md  editor.cpp  editor.hpp  gui.cpp  gui.hpp
src/window/: CMakeLists.txt  README.md  window.cpp  window.hpp
test/: CMakeLists.txt  README.md  a.out  core.cpp  gltf.cpp  main.cpp  render.cpp  render_api.cpp  shader.vert  vert.spv
tools/: README.md  changes  formatter  loc  profile
