add_subdirectory(application)

add_subdirectory(window)

# add_subdirectory(audio)

# add_subdirectory(core)

add_subdirectory(debug)

# add_subdirectory(event)

# add_subdirectory(memctl)

# add_subdirectory(network)

add_subdirectory(physics)

add_subdirectory(render)

# add_subdirectory(sence)

# add_subdirectory(ui)