add_subdirectory(core)

add_subdirectory(application)

add_subdirectory(window)

add_subdirectory(debug)

# add_subdirectory(event)

# add_subdirectory(io)

# add_subdirectory(network)

add_subdirectory(render)

add_subdirectory(ui)

add_subdirectory(scene)

add_subdirectory(physics)

add_subdirectory(audio)