add_subdirectory(core)

add_subdirectory(platform)

add_subdirectory(application)

add_subdirectory(window)

add_subdirectory(debug)

add_subdirectory(events)

add_subdirectory(io)

add_subdirectory(network)

add_subdirectory(render)

add_subdirectory(ui)

add_subdirectory(scene)

add_subdirectory(physics)

add_subdirectory(audio)